# openai-a2a-translator_agent

./: pyproject.toml
translatorAgent/: __main__.py  agent.py  taskmanager.py
