[project]
name = "openai-translator-a2a-agent"
version = "0.1.0"
description = "An agent that translates text from English to Spanish, French or Italian"
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.0.11",
    "autoa2a"
]

[tool.uv.sources]
autoa2a = { git = "https://github.com/Satti-Gowtham/autoa2a.git" }

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["translatorAgent"]

[project.scripts]
serve_a2a = "translatorAgent.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true